--- a/index.css
+++ b/index.css
@@ -70,3 +70,87 @@
   font-weight: 400;
   line-height: 101.385%;
 }
+
+/* .tablet */
+
+@media screen and (max-width: 1024px) {
+  .container {
+    padding: 160px 0 170px 122px;
+  }
+
+  .container h1 {
+    font-size: 32px;
+  }
+
+  .container h2 {
+    font-size: 14px;
+  }
+
+  .container h3 {
+    font-size: 46px;
+  }
+
+  .container ul {
+    margin-top: 72px;
+  }
+
+  .container ul li {
+    margin-right: 55px;
+    width: 170px;
+  }
+
+  .container h4 {
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-family: Roboto;
+    font-style: normal;
+  }
+
+  .container p {
+    height: 40px;
+    font-size: 10px;
+    font-style: normal;
+    font-family: Roboto;
+  }
+}
+
+/* .mobile */
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 62px 180px 63px 35px;
+    width: 649px;
+  }
+
+  .container h1 {
+    width: 224px;
+    font-size: 26px;
+  }
+
+  .container h2 {
+    font-size: 12px;
+  }
+
+  .container h3 {
+    font-size: 37px;
+  }
+
+  .container ul {
+    margin-top: 45px;
+  }
+
+  .container ul li {
+    margin-right: 31px;
+  }
+
+  .container h4 {
+    margin-bottom: 4.5px;
+    font-size: 12px;
+  }
+
+  .container p {
+    height: 40px;
+    font-size: 10px;
+    width: 140px;
+    height: 38px;
+  }
+}
