--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 .container {
   width: 100%;
   min-height: 100vh;
-  padding: 160px 0 170px 122px;
+  padding: 160px 0px 170px 122px;
   background: #9dc9c8;
 }
 
@@ -113,7 +113,6 @@
     font-family: Roboto;
   }
 }
-
 /* .mobile */
 @media screen and (max-width: 768px) {
   .container {
